--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/express": "^5.0.0",
     "@types/node": "^22.13.1",
     "eslint": "^9.19.0",
     "globals": "^15.14.0",
@@ -25,5 +26,8 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.23.0"
+  },
+  "dependencies": {
+    "express": "^4.21.2"
   }
 }
