--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@eslint/js": "^9.19.0",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^22.13.1",
     "eslint": "^9.19.0",
     "globals": "^15.14.0",
@@ -30,6 +31,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mongoose": "^8.10.0"
   }
 }
