--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
     "@types/http-errors": "^2.0.4",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.13.1",
     "eslint": "^9.19.0",
@@ -31,9 +33,11 @@
     "typescript-eslint": "^8.23.0"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0"
   }
 }
