--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/http-errors": "^2.0.4",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/mongoose": "^5.11.96",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.13.1",
     "eslint": "^9.19.0",
     "globals": "^15.14.0",
@@ -38,6 +39,7 @@
     "express": "^4.21.2",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.10.0"
+    "mongoose": "^8.10.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
